// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Swiper swiper demo works fine 1`] = `
<div
  class="tdesign-demo-block--swiper"
>
  <div
    class="t-swiper"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__swiper-wrap--horizontal"
        style="width: 400%; transform: translate3d(0%,0,0); transition: transform 0.3s;"
      >
        
        <div>
          
          <div
            class="t-alert t-alert--success"
          >
            <div
              class="t-alert__icon"
            >
              <svg
                class="t-icon t-icon-check-circle-filled"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
                  fill="currentColor"
                  fillOpacity="0.9"
                />
              </svg>
            </div>
            <div
              class="t-alert__content"
            >
              <!---->
              <div
                class="t-alert__message"
              >
                <div
                  class="t-alert__description"
                >
                  【到期提醒】
                  <!---->
                </div>
                <!---->
              </div>
            </div>
            <!---->
          </div>
          
        </div>
        <div>
          
          <div
            class="t-alert t-alert--info"
          >
            <div
              class="t-alert__icon"
            >
              <svg
                class="t-icon t-icon-info-circle-filled"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
                  fill="currentColor"
                  fillOpacity="0.9"
                />
              </svg>
            </div>
            <div
              class="t-alert__content"
            >
              <!---->
              <div
                class="t-alert__message"
              >
                <div
                  class="t-alert__description"
                >
                  【到期提醒】
                  <!---->
                </div>
                <!---->
              </div>
            </div>
            <!---->
          </div>
          
        </div>
        <div>
          
          <div
            class="t-alert t-alert--warning"
          >
            <div
              class="t-alert__icon"
            >
              <svg
                class="t-icon t-icon-error-circle-filled"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
                  fill="currentColor"
                  fillOpacity="0.9"
                />
              </svg>
            </div>
            <div
              class="t-alert__content"
            >
              <!---->
              <div
                class="t-alert__message"
              >
                <div
                  class="t-alert__description"
                >
                  【到期提醒】
                  <!---->
                </div>
                <!---->
              </div>
            </div>
            <!---->
          </div>
          
        </div>
        <div>
          
          <div
            class="t-alert t-alert--error"
          >
            <div
              class="t-alert__icon"
            >
              <svg
                class="t-icon t-icon-error-circle-filled"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
                  fill="currentColor"
                  fillOpacity="0.9"
                />
              </svg>
            </div>
            <div
              class="t-alert__content"
            >
              <!---->
              <div
                class="t-alert__message"
              >
                <div
                  class="t-alert__description"
                >
                  【到期提醒】
                  <!---->
                </div>
                <!---->
              </div>
            </div>
            <!---->
          </div>
          
        </div>
        
      </div>
    </div>
    <ul
      class="t-swiper__trigger-wrap"
    >
      
      <li
        class="t-swiper__trigger--active"
      />
      <li
        class=""
      />
      <li
        class=""
      />
      <li
        class=""
      />
      
    </ul>
  </div>
  <div
    class="t-swiper"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__swiper-wrap--horizontal"
        style="width: 400%; transform: translate3d(0%,0,0); transition: transform 0.5s;"
      >
        
        <div>
          
          <div
            class="t-alert t-alert--success"
          >
            <div
              class="t-alert__icon"
            >
              <svg
                class="t-icon t-icon-check-circle-filled"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
                  fill="currentColor"
                  fillOpacity="0.9"
                />
              </svg>
            </div>
            <div
              class="t-alert__content"
            >
              <!---->
              <div
                class="t-alert__message"
              >
                <div
                  class="t-alert__description"
                >
                  【到期提醒】
                  <!---->
                </div>
                <!---->
              </div>
            </div>
            <!---->
          </div>
          
        </div>
        <div>
          
          <div
            class="t-alert t-alert--info"
          >
            <div
              class="t-alert__icon"
            >
              <svg
                class="t-icon t-icon-info-circle-filled"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
                  fill="currentColor"
                  fillOpacity="0.9"
                />
              </svg>
            </div>
            <div
              class="t-alert__content"
            >
              <!---->
              <div
                class="t-alert__message"
              >
                <div
                  class="t-alert__description"
                >
                  【到期提醒】
                  <!---->
                </div>
                <!---->
              </div>
            </div>
            <!---->
          </div>
          
        </div>
        <div>
          
          <div
            class="t-alert t-alert--warning"
          >
            <div
              class="t-alert__icon"
            >
              <svg
                class="t-icon t-icon-error-circle-filled"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
                  fill="currentColor"
                  fillOpacity="0.9"
                />
              </svg>
            </div>
            <div
              class="t-alert__content"
            >
              <!---->
              <div
                class="t-alert__message"
              >
                <div
                  class="t-alert__description"
                >
                  【到期提醒】
                  <!---->
                </div>
                <!---->
              </div>
            </div>
            <!---->
          </div>
          
        </div>
        <div>
          
          <div
            class="t-alert t-alert--error"
          >
            <div
              class="t-alert__icon"
            >
              <svg
                class="t-icon t-icon-error-circle-filled"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
                  fill="currentColor"
                  fillOpacity="0.9"
                />
              </svg>
            </div>
            <div
              class="t-alert__content"
            >
              <!---->
              <div
                class="t-alert__message"
              >
                <div
                  class="t-alert__description"
                >
                  【到期提醒】
                  <!---->
                </div>
                <!---->
              </div>
            </div>
            <!---->
          </div>
          
        </div>
        
      </div>
    </div>
    <ul
      class="t-swiper__trigger-wrap"
    >
      
      <li
        class="t-swiper__trigger--active"
      />
      <li
        class=""
      />
      <li
        class=""
      />
      <li
        class=""
      />
      
    </ul>
  </div>
</div>
`;

exports[`Swiper vertical demo works fine 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__content"
  >
    <div
      class="t-swiper__swiper-wrap--vertical"
      style="height: 400%; transform: translate3d(0,0%,0); transition: transform 0.3s;"
    >
      
      <div>
        
        <div
          class="t-alert t-alert--success"
        >
          <div
            class="t-alert__icon"
          >
            <svg
              class="t-icon t-icon-check-circle-filled"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
                fill="currentColor"
                fillOpacity="0.9"
              />
            </svg>
          </div>
          <div
            class="t-alert__content"
          >
            <!---->
            <div
              class="t-alert__message"
            >
              <div
                class="t-alert__description"
              >
                【到期提醒】
                <!---->
              </div>
              <!---->
            </div>
          </div>
          <!---->
        </div>
        
      </div>
      <div>
        
        <div
          class="t-alert t-alert--info"
        >
          <div
            class="t-alert__icon"
          >
            <svg
              class="t-icon t-icon-info-circle-filled"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
                fill="currentColor"
                fillOpacity="0.9"
              />
            </svg>
          </div>
          <div
            class="t-alert__content"
          >
            <!---->
            <div
              class="t-alert__message"
            >
              <div
                class="t-alert__description"
              >
                【到期提醒】
                <!---->
              </div>
              <!---->
            </div>
          </div>
          <!---->
        </div>
        
      </div>
      <div>
        
        <div
          class="t-alert t-alert--warning"
        >
          <div
            class="t-alert__icon"
          >
            <svg
              class="t-icon t-icon-error-circle-filled"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
                fill="currentColor"
                fillOpacity="0.9"
              />
            </svg>
          </div>
          <div
            class="t-alert__content"
          >
            <!---->
            <div
              class="t-alert__message"
            >
              <div
                class="t-alert__description"
              >
                【到期提醒】
                <!---->
              </div>
              <!---->
            </div>
          </div>
          <!---->
        </div>
        
      </div>
      <div>
        
        <div
          class="t-alert t-alert--error"
        >
          <div
            class="t-alert__icon"
          >
            <svg
              class="t-icon t-icon-error-circle-filled"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
                fill="currentColor"
                fillOpacity="0.9"
              />
            </svg>
          </div>
          <div
            class="t-alert__content"
          >
            <!---->
            <div
              class="t-alert__message"
            >
              <div
                class="t-alert__description"
              >
                【到期提醒】
                <!---->
              </div>
              <!---->
            </div>
          </div>
          <!---->
        </div>
        
      </div>
      
    </div>
  </div>
  <ul
    class="t-swiper__trigger-wrap"
  >
    
    <li
      class="t-swiper__trigger--active"
    />
    <li
      class=""
    />
    <li
      class=""
    />
    <li
      class=""
    />
    
  </ul>
</div>
`;
